# Toleeee281

./: .gitignore  IMPLEMENTATION_STATUS.md  README.md  TESTING_CONTEXT.md  opencode.json  skills-lock.json
backend/: .gitignore  config.py  env.example.yaml  logger.py  main.py  pyproject.toml  tmp_batch_test.py  tmp_batch_test.txt  tmp_batch_test_out.txt
backend/libs/: datetime.py  result.py
backend/migration/: env.py
backend/migration/versions/: 024c7e31b8d3_fix_cham_cong_thang_he_so_ngay_cong_.py  0e5bcd6cd911_update_db.py  1957a2f5091b_add_nghi_phep_tables_v2.py  248e1101f916_merge_nguoi_than_and_cau_hinh_nghi_phep_.py  519a9fd83f52_add_don_xin_nghi_so_ngay_phep_cham_cong.py  76b007f56d3a_convert_timestamp_to_timestamptz.py  a1b2c3d4e5f6_add_loai_to_chuc_vu.py  a804bd663080_merge_heads.py  abc123def456_add_salary_config_tables.py  ac9225a0a31e_refactor_nhan_vien_cong_tac_table.py  add_2level_approval_nghi_phep.py  add_cau_hinh_nghi_phep_table.py  add_lich_cham_cong_table.py  add_missing_qr_config_columns_v1.py  add_qr_attendance_v1.py  bbe32dda7060_merge_heads.py  be7217d5263d_add_chuc_vu_fk_to_nhan_vien.py  c0ffee123456_add_ma_nhap_to_qr_config.py  c2a3587c02ac_create_tables.py  dd8444fcbd22_add_hop_dong_table.py  ef7d64c459df_add_ghi_chu_vang_to_check_in_out.py  (+4 more)
backend/scripts/: README_RBAC.md  init_admin.py  init_rbac.py  seed_mock_data.sql  seed_nhan_vien.py  setup_database.py
backend/tests/: test_flow_1_nghi_phep_luong.py  test_flow_2_tu_choi_hoan_phep.py  test_flow_3_dong_bo_he_so.py  test_flow_4_ngay_le_cham_cong.py  test_flow_5_tinh_luong_e2e.py
(+557 files in other folders)
