[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asgi-correlation-id>=4.3.4",
    "black>=26.3.1",
    "fastapi>=0.135.2",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "pyyaml>=6.0.3",
    "result>=0.17.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.43.0",
]
