[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asgi-correlation-id>=4.3.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "black>=26.3.1",
    "fastapi[standard]>=0.135.2",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "pyyaml>=6.0.3",
    "result>=0.17.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.43.0",
    "lunardate>=0.2.2",
    "holidays>=0.25",
    "python-dateutil>=2.9.0",
    "apscheduler~=3.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
